apps/mautrix/discord/overlays/nishir/netpol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: muatrix-discord
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: muatrix-discord
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: synapse
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: synapse-proxy
      ports:
        - port: http
